--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,4 +1,27 @@
 
+// Flexbox
+
+div {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    align-items: center;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    margin: 10px auto;
+}
+
+@media (max-width: 768px) {
+    div {
+        flex-direction: column;
+    }
+}
+
+// Font
+
 .blue-font {
   font-weight: 500;
   color: #264caf;
