--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -5,30 +5,30 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 20px;
-    align-items: center; /* Vertically aligns content */
+    align-items: center;
 }
 
 .custom-flexbox > div:first-child {
     flex: 1;
     padding-right: 10px;
-    text-align: left; /* Aligns text to the left for larger screens */
+    text-align: left;
 }
 
 .custom-flexbox > div:last-child img {
     max-width: 100%;
     height: auto;
-    margin: 10px auto; /* Centers the image horizontally */
+    margin: 10px auto;
 }
 
 @media (max-width: 768px) {
     .custom-flexbox {
-        flex-direction: column; /* Stacks text and image vertically */
-        align-items: center;   /* Centers everything horizontally */
+        flex-direction: column;
+        align-items: center;
     }
 
     .custom-flexbox > div {
-        text-align: center;  /* Centers text on smaller screens */
-        padding-right: 0;    /* Removes right padding for cleaner layout */
+        text-align: center;
+        padding-right: 0;
     }
 }
 
