--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -39,6 +39,11 @@
   color: #264caf;
 }
 
+.blue-font-b {
+  font-weight: 700;
+  color: #264caf;
+}
+
 .red-font {
   font-weight: 500;
   color: #dd2e2e;
