--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,3 +1,9 @@
+// Blue Button
+
+.btn-blue {
+  background-color: #264caf; /* Blue-200 */
+  color: #ffffff;            /* White text */
+}
 
 // Flexbox
 
