--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,7 +1,7 @@
 // Blue Button
 
 .btn-blue {
-  background-color: #264caf; /* Blue-200 */
+  background-color: #183385; /* Blue-200 */
   color: #ffffff;            /* White text */
 }
 
