--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,8 +1,8 @@
 // Blue Button
 
 .btn-blue {
-  background-color: #183385; /* Blue-200 */
-  color: #ffffff;            /* White text */
+  background-color: #183385 !important; /* Blue-300 */
+  color: #ffffff; 
 }
 
 // Flexbox
