--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,7 +1,7 @@
 // Blue Button
 
-.btn-blue {
-  background-color: #183385 !important; /* Blue-300 */
+.btn-blue2 {
+  background-color: #183385; /* Blue-300 */
   color: #ffffff; 
 }
 
