--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -4,6 +4,9 @@
   background-color: #183385; /* Blue-300 */
   color: #ffffff; 
 }
+.btn-blue2:hover {
+  background-color: #112266; /* Darker shade of blue */
+}
 
 // Flexbox
 
