--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -7,6 +7,7 @@
     padding: 0;
     height: 160px;
     border: none;
+    background: none; /* Remove the blue background */
 }
 
 /* Title Container */
