--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #183385;
+    background-color: transparent;
     padding: 0;
     height: 160px;
     border: none;
