--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -2,6 +2,7 @@
 
 .slug {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     background-color: transparent;
