--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -2,7 +2,6 @@
 
 .slug {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     background-color: transparent;
@@ -76,6 +75,7 @@
     .title-container {
         padding: 10px;
         text-align: center;
+        height: auto;
     }
 
     .page-title {
