--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -50,7 +50,7 @@
     font-size: 0.9rem;
     font-weight: normal;
     margin: 0 0 5px 0;
-    color: #ffcc00;
+    color: #ffc39c;
     text-transform: uppercase;
 }
 
