--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -61,13 +61,25 @@
 }
 
 .image-container {
+  position: relative;
   flex-shrink: 0;
   width: 290px;
   height: 160px;
   overflow: hidden;
   margin: 0;
   padding: 0;
-  position: relative;
+}
+
+.image-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%; /* This could be adjusted if you'd like the fade to cover less of the container */
+  background: linear-gradient(to right, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 20%);
+  z-index: 2; /* Ensure it sits above the image */
+  pointer-events: none;
 }
 
 .image-container img {
@@ -75,8 +87,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  margin: 0;
-  transition: opacity 0.5s ease;
+  position: relative; /* Ensures it remains underneath the pseudo-element */
+  z-index: 1;
 }
 
 .image-container.faded-left img {
