--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,18 +1,5 @@
 // Slug
 
-@mixin faded($offset, $blur-radius, $spread-radius) {
-  &.faded-left:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0) $offset, rgba(0, 0, 0, 1) 100%);
-    pointer-events: none;
-  }
-}
-
 .slug {
     display: flex;
     align-items: center;
@@ -50,7 +37,7 @@
     font-size: 0.9rem;
     font-weight: normal;
     margin: 0 0 5px 0;
-    color: #ffc39c;
+    color: #ffcc00;
     text-transform: uppercase;
 }
 
@@ -61,39 +48,20 @@
 }
 
 .image-container {
-  position: relative;
-  flex-shrink: 0;
-  width: 290px;
-  height: 160px;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-}
-
-.image-container::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 20%; /* Adjust this to control the width of the faded area */
-  height: 100%;
-  background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-  pointer-events: none; /* Ensures it doesn’t block clicks or interactions */
-  z-index: 2; /* Places it above the image */
+    flex-shrink: 0;
+    width: 290px;
+    height: 160px; 
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 .image-container img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  margin: 0;
-  position: relative; /* Keeps the image underneath the pseudo-element */
-  z-index: 1;
-}
-
-.image-container.faded-left img {
-  opacity: 0.6; /* Controls the fade effect; adjust as necessary */
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    margin: 0;
 }
 
 /* Responsive Design */
