--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -37,7 +37,7 @@
     font-size: 0.9rem;
     font-weight: normal;
     margin: 0 0 5px 0;
-    color: #ffcc00;
+    color: #02cada;
     text-transform: uppercase;
 }
 
