--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -3,6 +3,6 @@
 <a href="https://github.com/NetrunnerCodex/NetrunnerCodex.github.io">
   <img src="https://custom-icon-badges.demolab.com/badge/Open_Source-Netrunner_Codex-royalblue?style=flat&logo=github" alt="" style="display: block; margin-bottom: 0px;">
 </a>
-<p class="blue-font-b mb-0 fs-1" style="margin-top: 1px; font-family: Verdana, sans-serif;">UNOFFICIAL FANSITE</p>
+<p class="grey-font-b mb-0 fs-1" style="margin-top: 1px; font-family: Verdana, sans-serif;">UNOFFICIAL FANSITE</p>
 </footer>
 </center>
