--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -161,6 +161,11 @@
   color: #dd2e2e;
 }
 
+.red-font-b {
+  font-weight: 700;
+  color: #dd2e2e;
+}
+
 .grey-font-b {
   font-weight: 700;
   color: #5a5a5a;
