--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -168,7 +168,12 @@
 
 .grey-font-b {
   font-weight: 700;
-  color: #5a5a5a;
+  color: #5a5a5a; /* Grey-100 */
+}
+
+.grey2-font-b {
+  font-weight: 700;
+  color: #959396; /* Grey-000 */
 }
 
 // Icons
